--- a/configs/s6_predecide.yaml
+++ b/configs/s6_predecide.yaml
@@ -3,7 +3,7 @@ hybrid:
   K_total: 2
   dup_split: [1, 1]
 
-  p_gate: 0.55          # Lower gate for more DUP triggering
+  p_gate: 0.8          # Lower gate for more DUP triggering (0.55), Higher gate for less DUP triggering (0.75)
   allow_switch: true
   hysteresis_margin_prob: 0.0
   conf_k: 0.0           # Neutral (no pessimism or optimism)
@@ -26,7 +26,7 @@ predictor:
     m: 12.5
     # ✅ CRITICAL FIX: Threshold must be ABOVE the actual blockage SNR
     blockage_threshold: -10.0      # Detect blockage below -10 dB (blockages occur at -15)
-    blockage_recovery_rate: 0.7    # Faster recovery toward mean
+    blockage_recovery_rate: 0.5    # Faster recovery toward mean
   
   r: 0.25              # Lower measurement noise
 
